Fix title alignment

--- a/scss/base/typography.scss
+++ b/scss/base/typography.scss
@@ -32,7 +32,7 @@ h4 {
   position: relative;
   font-size: 14px;
   padding: 40px 0 50px;
-  text-align: center;
+  text-align: left;
   // color: #000;
   font-family: 'sansation bold', sans-serif;
   text-transform: uppercase;
@@ -40,9 +40,8 @@ h4 {
   &::after {
     position: absolute;
       bottom: 40px;
-      left: 50%;
+      left: 0;
     content: ' ';
-    margin-left: -3px;
     width: 6px;
     height: 2px;
     background: darken(#e6e6e6, 10%);
